--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,7 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
+.env
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
@@ -16,4 +17,3 @@ application/logs/*
 !application/logs/index.html
 !application/logs/.htaccess
 /vendor/
-/.env
