--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@
 !*/cache/index.html
 !*/cache/.htaccess
 
-.env
+*.env
 user_guide_src/build/*
 user_guide_src/cilexer/build/*
 user_guide_src/cilexer/dist/*
