--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,14 @@
     "require": {
         "php": "^7.4 || ^8.0",
         "codeigniter4/framework": "^4.0",
-        "league/csv": "^9.8"
+        "league/csv": "^9.8",
+        "ext-pgsql": "*"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9",
         "mikey179/vfsstream": "^1.6",
         "phpunit/phpunit": "^9.1"
+        
     },
     "autoload": {
         "exclude-from-classmap": [
